Remove Guava as production dependency (#103)
* Removes Guava as production dependency

Heavyweight depdencies such as Guava should only be used in libraries
when really necessary. In this case the Java 11 stream API can be used
as complete replacement.

Fixes #101 (Dependabot Guava upgrade).

* Remove accidentally added Java version